<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratting_hotel"
        android:textSize="20sp"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ratingBar"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/send_rating_btn"/>

    <Button
        android:id="@+id/send_rating_btn"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttom_height"
        android:layout_margin="@dimen/buttom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_rating_bt"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"/>

    <Button
        android:id="@+id/cancel_rating_bt"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttom_height"
        android:layout_margin="@dimen/buttom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_rating_btn" />

</android.support.constraint.ConstraintLayout>