<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bt_save"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_horizontal_margin"
                android:layout_marginRight="@dimen/medium_horizontal_margin">

                <ImageView
                    android:id="@+id/dv_profile_avatar"
                    android:layout_width="@dimen/profile_avatar_size"
                    android:layout_height="@dimen/profile_avatar_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/profile_avatar_margin_top"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    android:layout_marginEnd="8dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/dv_camera_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@color/colorPrimary"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/dv_profile_avatar" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/ic_white_camera"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="@id/dv_camera_icon"
                    app:layout_constraintRight_toRightOf="@id/dv_camera_icon"
                    app:layout_constraintLeft_toLeftOf="@id/dv_camera_icon"
                    app:layout_constraintBottom_toBottomOf="@id/dv_camera_icon" />


                <br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dv_profile_avatar">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:inputType="textCapSentences"
                        android:nextFocusDown="@id/et_email" />

                </br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout>

                <br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_name">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_e_mail"
                        android:inputType="text"
                        android:enabled="false"
                        android:nextFocusDown="@id/et_phone" />

                </br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout>

                <br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout
                    android:id="@+id/til_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"
                        android:inputType="textCapSentences"
                        android:nextFocusDown="@id/et_address" />

                </br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout>

                <br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout
                    android:id="@+id/til_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_phone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:inputType="textCapSentences"
                        android:nextFocusDown="@id/et_city" />

                </br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout>


                <br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout
                    android:id="@+id/til_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_address">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_hint"
                        android:inputType="textMultiLine"
                        android:nextFocusDown="@id/et_uf" />

                </br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout>

                <br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout
                    android:id="@+id/til_uf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_city">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_uf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/uf_hint"
                        android:inputType="textMultiLine" />

                </br.com.disapps.homepet.ui.custom.ClearErrorTextInputLayout>

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>



        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttom_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/medium_horizontal_margin"
            android:layout_marginHorizontal="@dimen/medium_horizontal_margin"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/buttom_margin"/>

        <include
            android:id="@+id/loading_view"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            layout="@layout/loading_view"
            android:visibility="gone"/>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>